// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcBtn > :attrs > should pass custom attributes 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="my-custom-button ec-btn"
  id="my-button"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a <button> element with class "ec-btn--md" when size is set to md 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a <button> element with class "ec-btn--sm" when size is set to sm 1`] = `
<button
  class="ec-btn ec-btn--sm"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with a spinner loader if loading is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--is-loading"
  data-test="ec-btn"
  disabled=""
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-btn__loading-spinner"
    data-test="ec-btn__loading-spinner"
  >
    <svg
      class="ec-icon ec-loading-icon"
      data-test="ec-loading-icon"
      height="22"
      width="22"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
</button>
`;

exports[`EcBtn > :props > should render a button with an outline when "isOutline" is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--outline"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with category "error" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--error"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with category "primary" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--primary"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with category "secondary" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--secondary"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with category "success" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--success"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with category "warning" when category "prop" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--warning"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with only a loading spinner when loading is set to true and no slots are passed 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--is-loading"
  data-test="ec-btn"
  disabled=""
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <div
    class="ec-btn__loading-spinner"
    data-test="ec-btn__loading-spinner"
  >
    <svg
      class="ec-icon ec-loading-icon"
      data-test="ec-loading-icon"
      height="22"
      width="22"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
</button>
`;

exports[`EcBtn > :props > should render a button with only an icon when the "icon" is defined but not the slots 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--icon-only"
  data-test="ec-btn"
  type="submit"
>
  <svg
    class="ec-icon ec-btn__icon"
    data-test="ec-btn__icon"
    height="22"
    width="22"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with type button if submit is set to false 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  type="button"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a button with type submit if submit is set to true 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a disabled button when "isDisabled" is set to true 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  disabled=""
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a full width button when "isFullWidth" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--full-width"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a reversed button for the "error" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--error ec-btn--error-reverse"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a reversed button for the "primary" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--primary ec-btn--primary-reverse"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a reversed button for the "secondary" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--secondary ec-btn--secondary-reverse"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a reversed button for the "success" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--success ec-btn--success-reverse"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a reversed button for the "warning" category when "isReverse" prop is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--warning ec-btn--warning-reverse"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a rounded button when the "isRounded" is set to true 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--rounded"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :props > should render a router link when we define the "to" prop 1`] = `
<ec-stub
  class="ec-btn ec-btn--md"
  data-test="ec-btn ec-stub router-link-stub"
  to="trade-finance"
>
  
  
</ec-stub>
`;

exports[`EcBtn > :props > should render a router link with a custom tag when we define the "tag option" 1`] = `
<ebury-stub
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  to="trade-finance"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</ebury-stub>
`;

exports[`EcBtn > :props > should render a router link with route object 1`] = `
<ec-stub
  class="ec-btn ec-btn--md"
  data-test="ec-btn ec-stub router-link-stub"
  to="Route with name 'trade-finance'"
>
  
  
</ec-stub>
`;

exports[`EcBtn > :props > should render an <a> element when we define the "href" prop 1`] = `
<a
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  href="https://ebury.com/"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</a>
`;

exports[`EcBtn > :props > should render given HTML attributes 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  formtarget="my-form"
  name="test-name"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;

exports[`EcBtn > :slots > should render a button with "Click me!" text 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <span
    class="ec-btn__text"
    data-test="ec-btn__text"
  >
    
    Click Me!
    
  </span>
  <!--v-if-->
</button>
`;

exports[`EcBtn > :slots > should render a button with "Click me!" text and an icon 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  type="submit"
>
  <svg
    class="ec-icon ec-btn__icon ec-btn__icon--with-spacing"
    data-test="ec-btn__icon"
    height="22"
    width="22"
  >
    <use
      xlink:href="#ec-simple-check"
    />
  </svg>
  <span
    class="ec-btn__text"
    data-test="ec-btn__text"
  >
    
    Click Me!
    
  </span>
  <!--v-if-->
</button>
`;

exports[`EcBtn > :slots > should render a button with a loading-text and a loading spinner when "isLoading" is set to true and we set the default slot 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--is-loading"
  data-test="ec-btn"
  disabled=""
  type="submit"
>
  <!--v-if-->
  <span
    class="ec-btn__text--is-loading ec-btn__text"
    data-test="ec-btn__text"
  >
    
    Click Me!
    
  </span>
  <div
    class="ec-btn__loading-spinner"
    data-test="ec-btn__loading-spinner"
  >
    <svg
      class="ec-icon ec-loading-icon"
      data-test="ec-loading-icon"
      height="22"
      width="22"
    >
      <use
        xlink:href="#ec-simple-loading"
      />
    </svg>
  </div>
</button>
`;

exports[`EcBtn > :slots > should render a custom loading text instead of a spinner when "text-loader" is set 1`] = `
<button
  class="ec-btn ec-btn--md ec-btn--is-loading"
  data-test="ec-btn"
  disabled=""
  type="submit"
>
  <!--v-if-->
  <span
    data-test="ec-btn__loading-text"
  >
    
    Loading...
    
  </span>
  <!--v-if-->
</button>
`;

exports[`EcBtn > should render a <button> element by default 1`] = `
<button
  class="ec-btn ec-btn--md"
  data-test="ec-btn"
  type="submit"
>
  <!--v-if-->
  <!--v-if-->
  <!--v-if-->
</button>
`;
